fixed width on mobile version of 08 lesson 01 homework. Started 09 lesson 01 project

--- a/08Lesson/01Homework/css/style.css
+++ b/08Lesson/01Homework/css/style.css
@@ -72,8 +72,9 @@ main {
 
   header p {
     line-height: normal;
+    width: 50%;
   }
-  
+
   main {
     flex-direction: column;
     width: 100%;
